# flock

./: .gitignore  .gitmodules  BrainComponent.cpp  CMakeLists.txt  Documentation.docx  imgui.ini
models/avoid/: avoid.blend  avoid.blend1  avoid.mtl
models/boid/: boid.blend  boid.blend1  boid.mtl
models/containment/: containment.blend  containment.blend1  containment.mtl
models/leader/: leader.blend  leader.blend1  leader.mtl
resource/models/Model_D0208009/: D0208009.mtl
resource/shaders/: fragment.glsl  obj_fragment.glsl  obj_vertex.glsl  sky_fragment.glsl  sky_vertex.glsl  vertex.glsl
src/: Arrive.cpp  Arrive.h  Behaviour.cpp  Behaviour.h  BrainComponent.cpp  BrainComponent.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Flee.cpp  Flee.h  ModelComponent.cpp  ModelComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  Pursue.cpp  Pursue.h  Raycast.cpp  Raycast.h  Scene.cpp  Scene.h  Seek.cpp  Seek.h  TransformComponent.cpp  TransformComponent.h  Wander.cpp  Wander.h  main.cpp
src/behaviours/: Alignment.cpp  Alignment.h  Arrive.cpp  Arrive.h  Avoid.cpp  Avoid.h  Behaviour.cpp  Behaviour.h  Cohesion.cpp  Cohesion.h  Evade.cpp  Evade.h  Flee.cpp  Flee.h  Pursue.cpp  Pursue.h  Seek.cpp  Seek.h  Separation.cpp  Separation.h  Wander.cpp  Wander.h
